# SIAD-WM

./: .gitignore  CLAUDE.md  COLLECTION-RECIPE.md  DATA.md  DECODER_FIXES.md  EXPORT-GUIDE.md  EXPORT_RECOVERY.md  EXPORT_STATUS.md  MODEL.md  PRD.md  QUICKSTART.md  README.md  TASK_1_COMPLETE.md  main.py  pyproject.toml
.agents/: AGENT_1_ARCHITECTURE.md  AGENT_2_API_BACKEND.md  AGENT_3_DESIGN.md  AGENT_4_FRONTEND.md  AGENT_5_UX.md  AGENT_6_COPY.md  DASHBOARD_COMPLETE.md  DETAIL_PAGE_COMPLETE.md  FULL_DEMO_COMPLETE.md  README.md  WEEK1_ARCHITECTURE_REVIEW.md  WEEK2_DAY1_COMPLETE.md  WEEK2_KICKOFF.md
configs/: V03_COMPLETION_SUMMARY.md  V03_EXPORT_STRATEGY.md  anti-collapse-example.yaml  detector-bay-area-v03.yaml  experiments.yaml  export-bay-area-full.yaml  export-bay-area-v03.yaml  large-export-100k.yaml  large-export-10k.yaml  model_sizes.yaml  preprocess-v2.yaml  preprocessing_manifest_v2.json  quickstart-demo.yaml  schema.yaml  test-export-v03.yaml  test-export.yaml  train-bay-area-v03.yaml  train-temporal-v2.yaml  train_a100.yaml  training_configs.yaml  v03-migration-rationale.md  v03-spec-fixes.md
docs/: A100_SETUP.md  ACTIONS_AGENT_REPLY.md  API_SPEC.md  BASELINES.md  COMPONENT_SPECS.md  CONTRACTS.md  COPY_QUICK_REFERENCE.md  DASHBOARD_MOCKUP.md  DATA_FLOW.md  DATA_PIPELINE_TESTING.md  DATA_TO_TRAINING.md  DEM_INTEGRATION_PLAN.md  DESIGN_QUICK_REFERENCE.md  DESIGN_SYSTEM.md  DESIGN_WEEK1_SUMMARY.md  DETECTION_AGENT_REPLY.md  EXPERIMENTS.md  IMPROVEMENT_GUIDE.md  INFRA_AGENT_REPLY.md  INTERACTION_SPEC.md  KEYBOARD_SHORTCUTS.md  SETUP.md  STORAGE_SCHEMA.md  (+18 more)
(+267 files in other folders)
